[gd_scene format=4 uid="uid://ubjgbkninwhf"]

[ext_resource type="Script" uid="uid://g8byyatq82do" path="res://menus/main_menu.gd" id="1_eicup"]
[ext_resource type="PackedScene" uid="uid://cm2ejclgyarrf" path="res://player/vision_blocker/vision_blocker.tscn" id="1_jt2la"]
[ext_resource type="Texture2D" uid="uid://em5ikda2vpnt" path="res://world/background.png" id="3_oln31"]
[ext_resource type="Texture2D" uid="uid://bx2wqofurwsi" path="res://world/background_blue.png" id="4_u4wdd"]
[ext_resource type="AudioStream" uid="uid://dc3wkwxbc4i17" path="res://menus/GGJ_2026_Menu.ogg" id="5_u4wdd"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0wk0f"]
texture = ExtResource("3_oln31")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uacro"]
texture = ExtResource("4_u4wdd")
texture_region_size = Vector2i(256, 256)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_r8wy3"]
tile_size = Vector2i(256, 256)
sources/0 = SubResource("TileSetAtlasSource_0wk0f")
sources/1 = SubResource("TileSetAtlasSource_uacro")

[node name="MainMenu" type="Control" unique_id=1339369508]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eicup")

[node name="VisionBlocker" parent="." unique_id=92788859 instance=ExtResource("1_jt2la")]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1744266740]

[node name="Label" type="Label" parent="CanvasLayer" unique_id=1313463888]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -488.0
offset_top = -188.0
offset_right = 488.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.9372549, 0.91764706, 0.7647059, 1)
theme_override_colors/font_shadow_color = Color(0.039215688, 0.039215688, 0.29411766, 0.5568628)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 5
theme_override_constants/shadow_outline_size = 19
theme_override_font_sizes/font_size = 179
text = "Vision Loss"

[node name="Button" type="Button" parent="CanvasLayer" unique_id=1527914391]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = 36.0
offset_right = 179.0
offset_bottom = 122.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Play Game!"

[node name="Timer" type="Timer" parent="." unique_id=907609261]
wait_time = 0.05
autostart = true

[node name="TileMapLayer" type="TileMapLayer" parent="." unique_id=1271035104]
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAABAAAAAQAAAAAAAAABAAEAAQAAAAAAAAAAAAEAAQAAAAAAAAD//wEAAQAAAAAAAAD//wAAAQAAAAAAAAABAP//AQAAAAAAAAAAAP//AQAAAAAAAAD/////AQAAAAAAAAD+////AQAAAAAAAAD+/wAAAQAAAAAAAAD+/wEAAQAAAAAAAAACAAEAAQAAAAAAAAACAAAAAQAAAAAAAAACAP//AQAAAAAAAAADAP//AQAAAAAAAAAEAP//AQAAAAAAAAAFAP//AQAAAAAAAAAGAP//AQAAAAAAAAAGAAAAAQAAAAAAAAAGAAEAAQAAAAAAAAAGAAIAAQAAAAAAAAAGAAMAAQAAAAAAAAAFAAMAAQAAAAAAAAAEAAMAAQAAAAAAAAADAAMAAQAAAAAAAAACAAMAAQAAAAAAAAABAAMAAQAAAAAAAAABAAIAAQAAAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAAEAAIAAQAAAAAAAAAFAAIAAQAAAAAAAAACAAIAAQAAAAAAAAADAAAAAQAAAAAAAAAEAAAAAQAAAAAAAAAFAAAAAQAAAAAAAAAFAAEAAQAAAAAAAAAEAAEAAQAAAAAAAAAAAAIAAQAAAAAAAAD//wIAAQAAAAAAAAD+/wIAAQAAAAAAAAD+/wMAAQAAAAAAAAD//wMAAQAAAAAAAAAAAAMAAQAAAAAAAAD+/wQAAQAAAAAAAAD//wQAAQAAAAAAAAAAAAQAAQAAAAAAAAABAAQAAQAAAAAAAAACAAQAAQAAAAAAAAADAAQAAQAAAAAAAAAEAAQAAQAAAAAAAAAFAAQAAQAAAAAAAAAGAAQAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAAAAQAAAAAAAAAHAP//AQAAAAAAAAAHAP7/AQAAAAAAAAAGAP7/AQAAAAAAAAAFAP7/AQAAAAAAAAAEAP7/AQAAAAAAAAADAP7/AQAAAAAAAAACAP7/AQAAAAAAAAABAP7/AQAAAAAAAAAAAP7/AQAAAAAAAAD///7/AQAAAAAAAAD+//7/AQAAAAAAAAAIAP7/AQAAAAAAAAAIAP//AQAAAAAAAAAIAAAAAQAAAAAAAAAIAAEAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAMAAQAAAAAAAAAIAAQAAQAAAAAAAAAIAAUAAQAAAAAAAAAHAAUAAQAAAAAAAAAGAAUAAQAAAAAAAAAFAAUAAQAAAAAAAAAEAAUAAQAAAAAAAAADAAUAAQAAAAAAAAACAAUAAQAAAAAAAAABAAUAAQAAAAAAAAAAAAUAAQAAAAAAAAD//wUAAQAAAAAAAAD+/wUAAQAAAAAAAAD+/wYAAQAAAAAAAAD//wYAAQAAAAAAAAAAAAYAAQAAAAAAAAABAAYAAQAAAAAAAAACAAYAAQAAAAAAAAADAAYAAQAAAAAAAAAEAAYAAQAAAAAAAAAFAAYAAQAAAAAAAAAGAAYAAQAAAAAAAAAHAAYAAQAAAAAAAAAIAAYAAQAAAAAAAAAJAAYAAQAAAAAAAAAJAAUAAQAAAAAAAAAJAAQAAQAAAAAAAAAJAAMAAQAAAAAAAAAJAAIAAQAAAAAAAAAJAAEAAQAAAAAAAAAJAAAAAQAAAAAAAAAJAP//AQAAAAAAAAAJAP7/AQAAAAAAAAAJAP3/AQAAAAAAAAAIAP3/AQAAAAAAAAAHAP3/AQAAAAAAAAAGAP3/AQAAAAAAAAAFAP3/AQAAAAAAAAAEAP3/AQAAAAAAAAADAP3/AQAAAAAAAAACAP3/AQAAAAAAAAABAP3/AQAAAAAAAAAAAP3/AQAAAAAAAAD///3/AQAAAAAAAAD+//3/AQAAAAAAAAD9//3/AQAAAAAAAAD9//7/AQAAAAAAAAD9////AQAAAAAAAAD9/wAAAQAAAAAAAAD9/wEAAQAAAAAAAAD9/wIAAQAAAAAAAAD9/wMAAQAAAAAAAAD9/wQAAQAAAAAAAAD9/wUAAQAAAAAAAAD9/wYAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_r8wy3")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." unique_id=1075687233]
stream = ExtResource("5_u4wdd")
autoplay = true

[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
